--- a/src/app/components/auth/reset-password/reset-password.component.html
+++ b/src/app/components/auth/reset-password/reset-password.component.html
@@ -1,34 +1,40 @@
-<div class="center-wrapper">
-  <div class="form-wrapper">
-    <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+<form class="login-form" (ngSubmit)="onSubmit()">
+  <div class="form-fields">
+    <mat-form-field appearance="outline"  class="full-width password-field">
+      <mat-label>Email</mat-label>
+      <input
+        matInput
+        [type]="isShowNewPassword() ? 'text' : 'password'"
+        [field]="resetPasswordForm.newPassword"
+      >
+      <button class="password-eye-btn" type="button" (click)="isShowNewPassword.set(!isShowNewPassword())">
+        <i [ngClass]="isShowNewPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
+      </button>
+      @if (!resetPasswordForm.newPassword().valid()) {
+        <mat-error>Парль не введен</mat-error>
+      }
+    </mat-form-field>
 
-    <form class="reset-password-form" [formGroup]="resetPasswordForm" (ngSubmit)="resetPassword()">
-      <h3>Сброс пароля</h3>
-      <div *ngIf="message" [ngClass]="['message', 'error']"><p>{{ message }}</p></div>
-
-      <div class="input-group">
-        <input [type]="isShowNewPassword() ? 'text' : 'password'" class="input-field" id="newPassword"
-               formControlName="newPassword" placeholder=" "/>
-        <label for="newPassword" class="input-label">Новый пароль</label>
-        <button class="password-eye-btn" type="button" (click)="isShowNewPassword.set(!isShowNewPassword())">
-          <i [ngClass]="isShowNewPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
-        </button>
-        <div class="input-hint">Пароль должен содержать минимум 8 символов</div>
-      </div>
-
-      <div class="input-group">
-        <input [type]="isShowRepeatedPassword() ? 'text' : 'password'" class="input-field" id="repeatedPassword"
-               formControlName="repeatedPassword" placeholder=" "/>
-        <label for="repeatedPassword" class="input-label">Подтверждение пароля</label>
-        <button class="password-eye-btn" type="button" (click)="isShowRepeatedPassword.set(!isShowRepeatedPassword())">
-          <i [ngClass]="isShowRepeatedPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
-        </button>
-        <div class="input-hint">Пароль должен содержать минимум 8 символов</div>
-      </div>
-
-      <button class="btn" type="submit" [disabled]="!resetPasswordForm.valid">Сбросить пароль</button>
-
-    </form>
+    <mat-form-field appearance="outline" class="full-width password-field">
+      <mat-label>Пароль</mat-label>
+      <input
+        matInput
+        [type]="isShowRepeatedPassword() ? 'text' : 'password'"
+        [field]="resetPasswordForm.repeatedPassword"
+      >
+      <button class="password-eye-btn" type="button" (click)="isShowRepeatedPassword.set(!isShowRepeatedPassword())">
+        <i [ngClass]="isShowRepeatedPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
+      </button>
+      @if (!resetPasswordForm.repeatedPassword().valid()) {
+        <mat-error>Пароль не введен</mat-error>
+      }
+    </mat-form-field>
   </div>
-</div>
+
+  <div class="form-actions" >
+      <app-button type="submit"
+                  [disabled]="!resetPasswordForm.newPassword().valid() || !resetPasswordForm.repeatedPassword().valid()">
+        Сбросить пароль
+      </app-button>
+  </div>
+</form>
