--- a/src/app/components/auth/update-password/update-password.component.html
+++ b/src/app/components/auth/update-password/update-password.component.html
@@ -1,48 +1,55 @@
-<div class="center-wrapper">
-  <div class="form-wrapper">
-    <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+<form class="login-form" (ngSubmit)="onSubmit()">
+  <div class="form-fields">
+    <mat-form-field appearance="outline" class="full-width password-field">
+      <mat-label>Пароль</mat-label>
+      <input
+        matInput
+        [type]="isShowCurrentPassword() ? 'text' : 'password'"
+        [field]="updatePasswordForm.currentPassword"
+      >
+      <button class="password-eye-btn" type="button" (click)="isShowCurrentPassword.set(!isShowCurrentPassword())">
+        <i [ngClass]="isShowCurrentPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
+      </button>
+      @if (!updatePasswordForm.currentPassword().valid()) {
+        <mat-error>Пароль не введен</mat-error>
+      }
+    </mat-form-field>
 
-    <form class="update-password-form" [formGroup]="updatePasswordForm" (ngSubmit)="updatePassword()">
-      <h3>Обновление пароля</h3>
+    <mat-form-field appearance="outline"  class="full-width password-field">
+      <mat-label>Email</mat-label>
+      <input
+        matInput
+        [type]="isShowNewPassword() ? 'text' : 'password'"
+        [field]="updatePasswordForm.newPassword"
+      >
+      <button class="password-eye-btn" type="button" (click)="isShowNewPassword.set(!isShowNewPassword())">
+        <i [ngClass]="isShowNewPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
+      </button>
+      @if (!updatePasswordForm.newPassword().valid()) {
+        <mat-error>Парль не введен</mat-error>
+      }
+    </mat-form-field>
 
-      <div *ngIf="message" class="message" [ngClass]="{'success': isUpdate, 'error': !isUpdate}">
-        <p>{{ message }}</p>
-      </div>
-
-      <div class="input-group">
-        <input [type]="isShowCurrentPassword() ? 'text' : 'password'" class="input-field" id="currentPassword"
-               formControlName="currentPassword" placeholder=" "/>
-        <label for="currentPassword" class="input-label">Текущий пароль</label>
-        <button class="password-eye-btn" type="button" (click)="isShowCurrentPassword.set(!isShowCurrentPassword())">
-          <i [ngClass]="isShowCurrentPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
-        </button>
-        <div class="input-hint">Пароль должен содержать минимум 8 символов</div>
-      </div>
-
-      <div class="input-group">
-        <input [type]="isShowNewPassword() ? 'text' : 'password'" class="input-field" id="newPassword"
-               formControlName="newPassword" placeholder=" "/>
-        <label for="newPassword" class="input-label">Новый пароль</label>
-        <button class="password-eye-btn" type="button" (click)="isShowNewPassword.set(!isShowNewPassword())">
-          <i [ngClass]="isShowNewPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
-        </button>
-        <div class="input-hint">Пароль должен содержать минимум 8 символов</div>
-      </div>
-
-      <div class="input-group">
-        <input [type]="isShowRepeatedPassword() ? 'text' : 'password'" class="input-field" id="repeatedPassword"
-               formControlName="repeatedPassword" placeholder=" "/>
-        <label for="repeatedPassword" class="input-label">Подтверждение пароля</label>
-        <button class="password-eye-btn" type="button" (click)="isShowRepeatedPassword.set(!isShowRepeatedPassword())">
-          <i [ngClass]="isShowRepeatedPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
-        </button>
-        <div class="input-hint">Пароль должен содержать минимум 8 символов</div>
-      </div>
-
-      <button class="btn" type="submit" [disabled]="!updatePasswordForm.valid">Сбросить пароль</button>
-
-    </form>
+    <mat-form-field appearance="outline" class="full-width password-field">
+      <mat-label>Пароль</mat-label>
+      <input
+        matInput
+        [type]="isShowRepeatedPassword() ? 'text' : 'password'"
+        [field]="updatePasswordForm.repeatedPassword"
+      >
+      <button class="password-eye-btn" type="button" (click)="isShowRepeatedPassword.set(!isShowRepeatedPassword())">
+        <i [ngClass]="isShowRepeatedPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
+      </button>
+      @if (!updatePasswordForm.repeatedPassword().valid()) {
+        <mat-error>Пароль не введен</mat-error>
+      }
+    </mat-form-field>
   </div>
-</div>
 
+  <div class="form-actions" >
+    <app-button type="submit"
+                [disabled]="!updatePasswordForm.newPassword().valid() || !updatePasswordForm.repeatedPassword().valid()">
+      Обновить пароль
+    </app-button>
+  </div>
+</form>
