--- a/src/app/components/auth/reset-password/reset-password.component.html
+++ b/src/app/components/auth/reset-password/reset-password.component.html
@@ -11,7 +11,7 @@
         <i [ngClass]="isShowNewPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
       </button>
       @if (!resetPasswordForm.newPassword().valid()) {
-        <mat-error>Парль не введен</mat-error>
+        <mat-error>Пароль не введен</mat-error>
       }
     </mat-form-field>
 
