--- a/src/app/components/auth/logging.scss
+++ b/src/app/components/auth/logging.scss
@@ -1,4 +1,4 @@
-.login-form {
+.form {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -61,14 +61,16 @@
 }
 
 .form-actions {
-  margin-top: 0.5rem;
-}
-
-.form-actions {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 1rem;
-  margin-top: 0.5rem;
+  margin-top: 0;
+  align-items: flex-start;
+  justify-content: space-between;
+
+  > div:first-child {
+    flex-shrink: 0;
+  }
 }
 
 .form-links {
@@ -79,7 +81,6 @@
   color: rgba(0, 0, 0, 0.6);
 
   a {
-    color: #1976d2; // primary color из Material
     text-decoration: none;
 
     &:hover {
