--- a/src/app/components/auth/registration/registration.component.html
+++ b/src/app/components/auth/registration/registration.component.html
@@ -1,4 +1,4 @@
-<form class="login-form" (ngSubmit)="onSubmit()">
+<form class="form" (ngSubmit)="onSubmit()">
   <div class="form-fields">
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Email</mat-label>
