--- a/src/app/components/auth/update-password/update-password.component.html
+++ b/src/app/components/auth/update-password/update-password.component.html
@@ -1,7 +1,7 @@
 <form class="form" (ngSubmit)="onSubmit()">
   <div class="form-fields">
     <mat-form-field appearance="outline" class="full-width password-field">
-      <mat-label>Пароль</mat-label>
+      <mat-label>Текущий пароль</mat-label>
       <input
         matInput
         [type]="isShowCurrentPassword() ? 'text' : 'password'"
@@ -15,8 +15,8 @@
       }
     </mat-form-field>
 
-    <mat-form-field appearance="outline"  class="full-width password-field">
-      <mat-label>Email</mat-label>
+    <mat-form-field appearance="outline" class="full-width password-field">
+      <mat-label>Новый пароль</mat-label>
       <input
         matInput
         [type]="isShowNewPassword() ? 'text' : 'password'"
@@ -31,7 +31,7 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="full-width password-field">
-      <mat-label>Пароль</mat-label>
+      <mat-label>Подтверждение пароль</mat-label>
       <input
         matInput
         [type]="isShowRepeatedPassword() ? 'text' : 'password'"
@@ -46,7 +46,7 @@
     </mat-form-field>
   </div>
 
-  <div class="form-actions" >
+  <div class="form-actions">
     <app-button type="submit"
                 [disabled]="!updatePasswordForm.newPassword().valid() || !updatePasswordForm.repeatedPassword().valid()">
       Обновить пароль
