--- a/src/app/components/auth/forgot-password/forgot.password.component.html
+++ b/src/app/components/auth/forgot-password/forgot.password.component.html
@@ -1,13 +1,13 @@
-<form class="form" (ngSubmit)="onSubmit()">
+<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="form-fields">
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Email</mat-label>
       <input
         matInput
         type="email"
-        [field]="forgotForm.email"
+        formControlName ="email"
       >
-      @if (!forgotForm.email().valid()) {
+      @if (form.controls['email'].hasError('email')) {
         <mat-error>Некорректный email</mat-error>
       }
     </mat-form-field>
@@ -15,7 +15,7 @@
 
   <div class="form-actions">
     <div>
-      <app-button type="submit" [disabled]="!forgotForm.email().valid()">
+      <app-button type="submit" [disabled]="form.controls['email'].hasError('email')">
         Восстановить
       </app-button>
     </div>
