--- a/src/app/components/auth/reset-password/reset-password.component.html
+++ b/src/app/components/auth/reset-password/reset-password.component.html
@@ -1,39 +1,38 @@
-<form class="form" (ngSubmit)="onSubmit()">
+<form class="form" [formGroup]="form"  (ngSubmit)="onSubmit()">
   <div class="form-fields">
     <mat-form-field appearance="outline"  class="full-width password-field">
-      <mat-label>Email</mat-label>
+      <mat-label>Новый пароль</mat-label>
       <input
         matInput
         [type]="isShowNewPassword() ? 'text' : 'password'"
-        [field]="resetPasswordForm.newPassword"
+        formControlName="newPassword"
       >
       <button class="password-eye-btn" type="button" (click)="isShowNewPassword.set(!isShowNewPassword())">
         <i [ngClass]="isShowNewPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
       </button>
-      @if (!resetPasswordForm.newPassword().valid()) {
-        <mat-error>Пароль не введен</mat-error>
+      @if (form.controls['newPassword'].hasError('minLength')) {
+        <mat-error>Пароль менее 8 символов</mat-error>
       }
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="full-width password-field">
-      <mat-label>Пароль</mat-label>
+      <mat-label>Подтверждение пароля</mat-label>
       <input
         matInput
         [type]="isShowRepeatedPassword() ? 'text' : 'password'"
-        [field]="resetPasswordForm.repeatedPassword"
+        formControlName="repeatedPassword"
       >
       <button class="password-eye-btn" type="button" (click)="isShowRepeatedPassword.set(!isShowRepeatedPassword())">
         <i [ngClass]="isShowRepeatedPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
       </button>
-      @if (!resetPasswordForm.repeatedPassword().valid()) {
-        <mat-error>Пароль не введен</mat-error>
+      @if (form.controls['repeatedPassword'].hasError('minLength')) {
+        <mat-error>Пароль менее 8 символов</mat-error>
       }
     </mat-form-field>
   </div>
 
   <div class="form-actions" >
-      <app-button type="submit"
-                  [disabled]="!resetPasswordForm.newPassword().valid() || !resetPasswordForm.repeatedPassword().valid()">
+      <app-button type="submit">
         Сбросить пароль
       </app-button>
   </div>
