--- a/src/app/components/auth/update-password/update-password.component.html
+++ b/src/app/components/auth/update-password/update-password.component.html
@@ -1,16 +1,16 @@
-<form class="form" (ngSubmit)="onSubmit()">
+<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="form-fields">
     <mat-form-field appearance="outline" class="full-width password-field">
       <mat-label>Текущий пароль</mat-label>
       <input
         matInput
         [type]="isShowCurrentPassword() ? 'text' : 'password'"
-        [field]="updatePasswordForm.currentPassword"
+        formControlName="currentPassword"
       >
       <button class="password-eye-btn" type="button" (click)="isShowCurrentPassword.set(!isShowCurrentPassword())">
         <i [ngClass]="isShowCurrentPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
       </button>
-      @if (!updatePasswordForm.currentPassword().valid()) {
+      @if (form.controls['currentPassword'].hasError('minLength')) {
         <mat-error>Пароль не введен</mat-error>
       }
     </mat-form-field>
@@ -20,12 +20,12 @@
       <input
         matInput
         [type]="isShowNewPassword() ? 'text' : 'password'"
-        [field]="updatePasswordForm.newPassword"
+        formControlName="newPassword"
       >
       <button class="password-eye-btn" type="button" (click)="isShowNewPassword.set(!isShowNewPassword())">
         <i [ngClass]="isShowNewPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
       </button>
-      @if (!updatePasswordForm.newPassword().valid()) {
+      @if (form.controls['newPassword'].hasError('minLength')) {
         <mat-error>Парль не введен</mat-error>
       }
     </mat-form-field>
@@ -35,20 +35,19 @@
       <input
         matInput
         [type]="isShowRepeatedPassword() ? 'text' : 'password'"
-        [field]="updatePasswordForm.repeatedPassword"
+        formControlName="repeatedPassword"
       >
       <button class="password-eye-btn" type="button" (click)="isShowRepeatedPassword.set(!isShowRepeatedPassword())">
         <i [ngClass]="isShowRepeatedPassword() ? 'bx bx-hide' : 'bx bx-show'"></i>
       </button>
-      @if (!updatePasswordForm.repeatedPassword().valid()) {
+      @if (form.controls['repeatedPassword'].hasError('minLength')) {
         <mat-error>Пароль не введен</mat-error>
       }
     </mat-form-field>
   </div>
 
   <div class="form-actions">
-    <app-button type="submit"
-                [disabled]="!updatePasswordForm.newPassword().valid() || !updatePasswordForm.repeatedPassword().valid()">
+    <app-button type="submit">
       Обновить пароль
     </app-button>
   </div>
