--- a/src/app/components/auth/confirmation/confirmation.component.html
+++ b/src/app/components/auth/confirmation/confirmation.component.html
@@ -1,19 +1,22 @@
 <div class="wrapper">
-  @if (!confirmed && !message) {
-    <div class="container-load">
-      <div class="spinner"></div>
-      <p>Подтверждаем активацию...</p>
+  @if (!isConfirmation() && !message) {
+    <div class="loading-container">
+      <mat-spinner diameter="100"></mat-spinner>
+      <p class="loading-text">Подтверждаем активацию...</p>
     </div>
-  } @else if (confirmed) {
-    <div class="container">
+  } @else if (isConfirmation()) {
+    <div class="container success">
       <h2>Активация прошла успешно 🎉</h2>
       <p>Теперь вы можете войти в систему.</p>
-      <a routerLink="/" class="btn">Войти</a>
+      <app-button routerLink="/">Войти</app-button>
     </div>
-  } @else if (message) {
-    <div class="container">
+  } @else if (message()) {
+    <div class="container error">
       <h2>Ошибка 😕</h2>
-      <div [ngClass]="['message', 'error']"><p>{{ message }}</p></div>
+      <div class="message error">
+        <p>{{ message() }}</p>
+      </div>
+      <app-button (click)="repeatConfirmation()">Отправить повторную ссылку подтверждения</app-button>
     </div>
   }
 </div>
