--- a/src/app/components/profile/person/general/create/create.html
+++ b/src/app/components/profile/person/general/create/create.html
@@ -71,7 +71,7 @@
   </ng-container>
 
   <ng-container class="form-actions">
-    <app-button type="submit">
+    <app-button>
       Сохранить
     </app-button>
   </ng-container>
