--- a/src/app/components/profile/person/general/create/create.scss
+++ b/src/app/components/profile/person/general/create/create.scss
@@ -59,3 +59,11 @@
     }
   }
 }
+
+.success-button {
+  background: var(--success);
+  color: white;
+}
+.success-button:hover {
+  background: var(--success-container);
+}
