--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,17 +1,39 @@
 @use '@angular/material' as mat;
-@use "styles/notifier";
+@use 'styles/theme-colors';
 
-@include mat.theme((
-  color: (
-    primary: mat.$azure-palette,
-    tertiary: mat.$blue-palette,
-    error: mat.$red-palette,
-  ),
-  density: 0,
-));
+@include mat.core();
 
+html {
+  color-scheme: light dark;
 
-html, body {
+  @include mat.theme((
+    color: (
+      primary: theme-colors.$primary-palette,
+      tertiary: theme-colors.$tertiary-palette,
+    ),
+    typography: Roboto,
+    density: 0,
+  ));
+}
+
+.tertiary {
+  @include mat.theme((color: theme-colors.$tertiary-palette))
+}
+
+.secondary {
+  @include mat.theme((color: theme-colors.$secondary-palette))
+}
+
+.error {
+  @include mat.theme((color: theme-colors.$error-palette))
+}
+
+@media (prefers-contrast: more) {
+  @include theme-colors.high-contrast-overrides(color-scheme);
+}
+
+html,
+body {
   height: 100%;
 }
 
@@ -21,9 +43,4 @@ body {
   background-color: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
   font: var(--mat-sys-body-medium);
-}
-
-.success .mat-mdc-snack-bar-container {
-  background: green !important;
-  color: white !important;
 }
