--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @use 'styles/notification';
 @use "styles/dialog-form";
 @use "styles/abstract-style";
+@use "styles/table-style";
 
 @include mat.core();
 
